cmake_minimum_required(VERSION 3.23)

project(COMPILER VERSION 1.0)

set(CMAKE_CXX_STANDARD 23)
#set(CMAKE_CXX_STANDARD_REQUIRED True)

add_executable(main main.cpp)
#add_executable(imp_test
        #imp_test.cpp
        #imp.cpp
        #imp_interpreter.cpp
        #imp_parser.cpp
        #imp_printer.cpp
        #imp_typechecker.cpp
        #imp_value.cpp
        #svm_parser.cpp
        #svm_run.cpp
        #svm.cpp
        #env_test.cpp)
        #code/imp_test.cpp
        #code/svm.cpp
        #code/svm_parser.cpp
        #code/svm_run.cpp
        #)
